--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -1,8 +1,9 @@
 .jumbotron {
-	margin-right: -15px;
+	/* margin-right: -15px;
 	margin-left: -15px;
-  min-height: 100px;
-	background-color: lightblue;
-	width: 100%;
-	border-bottom: 8px solid #007bff;
+  min-height: 100px; */
+	background-color: whitesmoke;
+  height: auto;
+  width: 100%;
+	border-bottom: 8px solid darkgray;
 }
